--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,6 +1,6 @@
 .home {
    //position: relative;
-    height: 80vh;
+    height: 85vh;
     width: 100vw;
    // overflow: hidden;
 }
@@ -12,7 +12,8 @@
     top: 0;
     left: 0;
     z-index: -1;
-    background-color: rgb(15 15 15 / 50%);
+    background-color: rgb(10 24 15 / 75%);
+    //background-color: rgb(15 15 15 / 50%);
 }
 .brgImg{
     width: 100%;
@@ -47,4 +48,10 @@
     margin: auto;
     width: 75%;
     color:#c2c2c2;
+}
+.underProgress{
+    float: right;
+    margin-top: 17%;
+    color: greenyellow;
+    margin-right: 25px;
 }
