--- a/src/Pages/models/Footer.css
+++ b/src/Pages/models/Footer.css
@@ -2,18 +2,20 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #f1f1f1; /* Light gray background */
+  background-color: black; /* Light gray background */
   padding: 20px 50px; /* Adjust for space */
 }
 
 .footerLeft {
   display: flex;
   align-items: center;
+  flex-direction: column;
 }
 
 .footerLeft h2 {
   font-size: 1.7em;
   margin-right: 40px;
+  color: blue;
 }
 
 .socialIcons {
@@ -44,16 +46,30 @@
 .footerRight {
   display: flex;
   gap: 30px;
+  align-items:center;
 }
 
 .footerRight a {
   text-decoration: none;
-  color: #000; /* Dark color for links */
+  color: white; /* Dark color for links */
   font-size: 1.4em;
   font-weight: 700;
   transition: color 0.3s ease;
 }
+.footerRight h2{
+  color: white;
+}
 
 .footerRight a:hover {
-  color: #555; /* Hover effect for links */
+  color: #1400ff;
+}
+
+.firstHalf{
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.navLogo{
+  width: 150px;
 }
